name:                stngDelta
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/romhack/stngDelta#readme
license:             MIT
license-file:        LICENSE
author:              Griever
maintainer:          example@example.com
copyright:           2018 Griever
category:            Compression
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stngDelta
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, binary, binary-bits, split, monad-loops
  ghc-options:         -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
